--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ nav.top {
     display: flex;
     flex-direction: row;
     gap: 50px;
-    position: fixed
 }
 
 img.netfliximage {
@@ -96,6 +95,9 @@ div.profile{
     animation: slide 3s ease infinite;
 }
 
+.big-pictures {
+    cursor: pointer;
+}
 
 @keyframes slide {
     0%, 100% { opacity: 0;}
@@ -103,7 +105,7 @@ div.profile{
 }
 
 
-.frierenimage {
+.slideimage {
     width: 100%;
     height: 100%;
 }
@@ -115,3 +117,67 @@ div.profile{
     margin-left: 32vw;
 }
 
+.TVshows {
+    color: white;
+    margin-top: 800px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+h1 {
+    margin-left: 30px;
+}
+
+.group {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.idk {
+    background-image: url(ANIME.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+margin-left: 30px;
+}
+
+.attack {
+    background-image: url(ATTACK.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+}
+
+.haikyu {
+    background-image: url(HAIKYU.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+}
+
+.jj2 {
+    background-image: url(JJ2.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+}
+
+.spy {
+    background-image: url(SPY.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+}
+
+.frie {
+    background-image: url(FRIE.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+}
+
+div.group:hover {
+    cursor: pointer;
+}
