--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h1 {
 .group {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 15px;
 }
 
 .idk {
@@ -180,4 +180,51 @@ height: 140px;
 
 div.group:hover {
     cursor: pointer;
+}
+
+div.trending {
+    margin-top: 50px;
+}
+
+.BB {
+    background-image: url(BB.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+margin-left: 2vw;
+}
+
+.PEAKY {
+    background-image: url(PEAKY.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+}
+
+.QUEEN {
+    background-image: url(queen.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+}
+
+.SHELDON {
+    background-image: url(sheldon.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+}
+
+.ST {
+    background-image: url(ST.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
+}
+
+.SHAME {
+    background-image: url(SHAME.png);
+background-size: 100% 100%;
+width: 250px;
+height: 140px;
 }
