--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     background-color: black;
     font-weight: bold;
 }
@@ -24,7 +24,7 @@ img.netfliximage {
 
 div.categories {
 display: flex;
-gap: 25vw;
+gap: 22vw;
 
 }
  
@@ -291,3 +291,9 @@ background-size: 100% 100%;
 width: 250px;
 height: 140px;
 }
+
+/* @media only screen and (max-width: 768px) {
+ body{
+    responsive: yes; :)
+ }
+} */
