--- a/style2.css
+++ b/style2.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 body {
     background: #000;
     color: #fff;
+
 }
 .header {
     width: 100%;
@@ -261,3 +262,9 @@ input[type="radio"]{
     margin-top: 20px;
     margin-bottom: 10px;
 }
+
+/* @media only screen and (max-width: 768px) {
+ body{
+    responsive: yes; :)
+ }
+} */
