--- a/style3.css
+++ b/style3.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 body {
@@ -213,3 +213,9 @@ input:focus, input:valid {
 .form-bottom .recaptcha p a:hover {
     text-decoration: underline;
 }
+
+/* @media only screen and (max-width: 768px) {
+ body{
+    responsive: yes; :)
+ }
+} */
